# kolibry_test

./: CMakeLists.txt  README.md  configmanager.cpp  configmanager.h  filescanner.cpp  filescanner.h  fileworker.cpp  fileworker.h  mainwindow.cpp  mainwindow.h  resumemanager.cpp  resumemanager.h  taskqueue.cpp  taskqueue.h
